# nova

./: .dockerignore  .env.local.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  next.config.mjs  nova.config.example.yaml  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/: CODEOWNERS  setup-branch-protection.sh
.github/workflows/: ci.yml  release.yml
app/: globals.css  layout.tsx  page.tsx
docs/: mcp-adapters-plan.md  notifications-plan.md
domains/: generic-k8s.yaml  payments.yaml  streaming.yaml
hooks/: use-ai-analysis.ts  use-dashboard-config.ts  use-incident-metrics.ts  use-open-incidents.ts  use-real-metrics.ts
lib/: dashboard-data.ts  incident-metrics.ts  incident-rca.ts  incident-seed.ts  incident-store.test.ts  incident-store.ts  incident-types.ts  live-state.tsx  local-time.ts  log-selection.test.ts  log-selection.ts  metrics-live-context.ts  metrics-live.tsx  metrics-series.ts  runbook-schema.test.ts  runbook-schema.ts  runbook-store.test.ts  runbook-store.ts  runbooks.test.ts  runbooks.ts
prompts/: chat-system.md  judge.md  rca.md  triage.md
test/: setup.ts
website/: .gitignore  mkdocs.yml  pyproject.toml
website/docs/: index.md  roadmap.md
website/docs/concepts/: adapters.md  ai-pipeline.md  architecture.md  domain-packs.md  incidents.md  index.md
website/docs/getting-started/: configuration.md  index.md  quickstart.md
website/docs/guides/: eval.md  logs.md  notifications.md  prometheus.md
website/docs/reference/: api.md  config.md
website/docs/stylesheets/: extra.css
(+199 files in other folders)
