[project]
name = "nova-docs"
version = "0"
description = "Nova documentation site (MkDocs Material)"
requires-python = ">=3.9"
dependencies = [
    "mkdocs-material>=9.5.0",
    "pymdown-extensions>=10.7",
]

# Docs-only project — uv shouldn't try to build/install it as a package,
# just manage its dependencies.
[tool.uv]
package = false
